--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,16 @@ branches:
     - /^circleci-.*$/
     - /^wercker-.*$/
 
-php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
+matrix:
+  include:
+    - php: 5.3
+    - php: 5.4
+    - php: 5.5
+    - php: 5.6
+    - php: 7.0
+  allow_failures:
+    - php: nightly
+  fast_finish: true
 
 before_script:
   - phpize && ./configure && make
