--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,8 @@ matrix:
     - php: 5.5
     - php: 5.6
     - php: 7.0
-  allow_failures:
     - php: nightly
-  fast_finish: false
+  fast_finish: true
 
 before_script:
   - phpize && ./configure && make
